Add "ground" colour variation for pines